# template-postgres-sa-project

./: Makefile  README.md  alembic.ini  docker-compose-pg-1.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 020b930c64dc_.py  3b0f3c5dcf23_.py  fb7ddddd772c_create_base_table.py
source/models/: base.py
src/: db.py  simple_job.py
src/models/: base.py
